(web) fix spacing issue

--- a/web/static/css/controlPanel.scss
+++ b/web/static/css/controlPanel.scss
@@ -2,7 +2,7 @@
 
 #cp {
     display: grid;
-    grid-template: 1fr 1fr / 1fr 1fr;
+    grid-template: repeat(3, auto) / 1fr 1fr;
     @include isMobile() {
         grid-template: none;
         grid-auto-flow: row;
